--- a/src/game2048/Cell.css
+++ b/src/game2048/Cell.css
@@ -2,10 +2,10 @@
 	font-size: 40px;
 	font-weight: bold;
 	text-align: center;
-	/*width: 130px;*/
+	width: 120px;
 	height: 120px;
-	border: 2px solid black;
-	margin: 2px;
+	border: 1px solid gray;
+	margin: 1px;
 }
 
 .cell-0 { background-color: #F3A392 }
